force-app/main/default/objects/TimeLog__c/TimeLog__c.object-meta.xml
<CustomObject>
    <description>Use this object to enter the time log for particular Project under an Account</description>
    <label>TimeLog</label>
    <nameField>
        <displayFormat>TL-{YYYY}{MM}-{0}</displayFormat>
        <label>TimeLog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TimeLogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>