force-app/main/default/objects/TimeLog__c/fields/Account_Customer__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer__c</fullName>
    <formula>Related_Project__r.Customer__r.Name</formula>
    <label>Account (Customer)</label>
    <type>Text</type>
</CustomField>