force-app/main/default/objects/TimeLog__c/fields/Break__c.field-meta.xml
<CustomField>
    <fullName>Break__c</fullName>
    <inlineHelpText>Any unbillable hours spent?</inlineHelpText>
    <label>Break</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>