force-app/main/default/objects/TimeLog__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the TimeLog entry</description>
    <inlineHelpText>What is this about?</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>