force-app/main/default/objects/TimeLog__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <description>Hours spent</description>
    <formula>ROUND((DATETIMEVALUE(End_Time__c) - DATETIMEVALUE(Start_Time__c)) * 24 - Break__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates time spent in hours. End - Start - Break = Duration</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>