force-app/main/default/objects/TimeLog__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>End time</description>
    <inlineHelpText>Enter the End time for the TimeLog</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>