force-app/main/default/objects/TimeLog__c/fields/Next_Discussion_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Discussion_Date__c</fullName>
    <inlineHelpText>Next Discussion with the Customer</inlineHelpText>
    <label>Next Discussion Date</label>
    <type>Date</type>
</CustomField>