force-app/main/default/objects/TimeLog__c/fields/No_Charge__c.field-meta.xml
<CustomField>
    <fullName>No_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates weather a customer should be charged for his TimeLog entry</description>
    <inlineHelpText>Check the box to avoid billing the client for this TimeLog entry</inlineHelpText>
    <label>No Charge</label>
    <type>Checkbox</type>
</CustomField>