force-app/main/default/objects/TimeLog__c/fields/PS_Item__c.field-meta.xml
<CustomField>
    <fullName>PS_Item__c</fullName>
    <formula>text(Related_Project__r.PS_item__c)</formula>
    <label>PS Item</label>
    <type>Text</type>
</CustomField>