force-app/main/default/objects/TimeLog__c/fields/PS_Main_Item__c.field-meta.xml
<CustomField>
    <fullName>PS_Main_Item__c</fullName>
    <label>PS Main Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoRABIT Implementation</fullName>
            </value>
            <value>
                <fullName>Annual Activities</fullName>
            </value>
            <value>
                <fullName>Playground</fullName>
            </value>
            <value>
                <fullName>CS Core</fullName>
            </value>
            <value>
                <fullName>Other activities</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Internal Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>