force-app/main/default/objects/TimeLog__c/fields/PS_Sub_Item__c.field-meta.xml
<CustomField>
    <fullName>PS_Sub_Item__c</fullName>
    <inlineHelpText>Choose the PS sub item related to the PS Item</inlineHelpText>
    <label>PS Sub Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PS_Main_Item__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Release Automation Discovery</fullName>
            </value>
            <value>
                <fullName>AutoRABIT Administration Set Up</fullName>
            </value>
            <value>
                <fullName>AutoRABIT User Training</fullName>
            </value>
            <value>
                <fullName>Release Automation Modelling with AutoRABIT</fullName>
            </value>
            <value>
                <fullName>Annual - AutoRABIT Training Pack</fullName>
            </value>
            <value>
                <fullName>Annual - Pre-CI Sandbox Alignment</fullName>
            </value>
            <value>
                <fullName>Annual - Complex Sandbox Metadata Deployment [ Upto 4 Sandboxes ]</fullName>
            </value>
            <value>
                <fullName>Annual - Production Deployment Hotline 	[ Upto 6 client releases]</fullName>
            </value>
            <value>
                <fullName>Annual - Salesforce Production Org Split/ setup</fullName>
            </value>
            <value>
                <fullName>Playground Infrastructure Prep</fullName>
            </value>
            <value>
                <fullName>Playground Task Review and sign-off</fullName>
            </value>
            <value>
                <fullName>Playground session running through the scenarios</fullName>
            </value>
            <value>
                <fullName>Playground Review sessions, touch points</fullName>
            </value>
            <value>
                <fullName>Discussion and Follow-ups with Product team for any issues</fullName>
            </value>
            <value>
                <fullName>Playground wrap-up and transition to Sales Team</fullName>
            </value>
            <value>
                <fullName>Overview Demo</fullName>
            </value>
            <value>
                <fullName>CS Core - Working with Salesforce Architect Community</fullName>
            </value>
            <value>
                <fullName>CS Core - Working with Salesforce Product Management Team</fullName>
            </value>
            <value>
                <fullName>CS Core - Working with Marketing Team</fullName>
            </value>
            <value>
                <fullName>CS Core - Work with Account Management Team</fullName>
            </value>
            <value>
                <fullName>CS Core - AutoRABIT CRM</fullName>
            </value>
            <value>
                <fullName>CS Core - AutoRABIT Academy</fullName>
            </value>
            <value>
                <fullName>CI Job Setup</fullName>
            </value>
            <value>
                <fullName>EZ-Commits Setup</fullName>
            </value>
            <value>
                <fullName>Org Synchronization setup</fullName>
            </value>
            <value>
                <fullName>TAF Setup</fullName>
            </value>
            <value>
                <fullName>Data Loader Pro setup</fullName>
            </value>
            <value>
                <fullName>Customization</fullName>
            </value>
            <value>
                <fullName>Playground Planning Session</fullName>
            </value>
            <value>
                <fullName>Initial Discovery Call w/ Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>