force-app/main/default/objects/TimeLog__c/fields/Related_Project__c.field-meta.xml
<CustomField>
    <fullName>Related_Project__c</fullName>
    <description>Look-up to Project.</description>
    <inlineHelpText>Project to which you would need the time to be rolled up.</inlineHelpText>
    <label>Professional Service</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>TimeLogs</relationshipLabel>
    <relationshipName>TimeLogs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>