force-app/main/default/objects/TimeLog__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Total Revenue generated by this Timelog</description>
    <formula>IF(No_Charge__c, 0, Duration__c *  Related_Project__r.Billable_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revenue generated by this timelog</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>