force-app/main/default/objects/TimeLog__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>Start Time</description>
    <inlineHelpText>Enter your start time for this entry</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>