force-app/main/default/objects/TimeLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the user who filed the Time Log</description>
    <inlineHelpText>Your Name?</inlineHelpText>
    <label>AutoRABIT Engg</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TimeLogs</relationshipName>
    <type>Lookup</type>
</CustomField>